some progress but assets are overflowing, needs fixing

--- a/css/systems.css
+++ b/css/systems.css
@@ -227,14 +227,13 @@ h3 {
     color: #272727;
     margin-bottom: 5px;
 }
-}
 
 h4 {
     font-family: 'Work Sans', sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
-    line-height: 28px;
+    line-height: 26px;
     color: #272727;
     margin-bottom: 5px;
 }
@@ -248,7 +247,6 @@ h5 {
     line-height: 23px;
     color: #272727;
     margin-bottom: 5x;
-}
 }
 
 .blurb {
@@ -269,8 +267,17 @@ h5 {
     }
 }
 
+.call-out {
+    display: flex;
+    align-items: center;
+}
 
-
+hr {
+    border: .5px solid;
+    color: #C9D0D3;
+    width: 100%;
+    margin: 40px auto;
+ }
 
 body {
     font-family: 'Work Sans', sans-serif;
